--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "backend server",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "backend": "nodemon backend/index.js",
     "frontend": "npm run dev --prefix frontend",
     "dev": "concurrently \"npm run frontend\" \"npm run backend"
